--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "public/index.php",
+            "src": "public/**/*",
             "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "public/index.php"
+            "dest": "/public/$1"
         }
     ]
 }
